Debugging User Role major Concern on Presentation

--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -178,7 +178,7 @@
       </mat-tab>
       </ng-template>
 
-      <ng-template [ngIf]="PoReceiving === 1">
+      <ng-template [ngIf]="CancelledPo === 1">
       <mat-tab>
         <ng-template mat-tab-label>
           Cancelled PO     
