--- a/app/app.component.html
+++ b/app/app.component.html
@@ -167,7 +167,7 @@
 
               </button>
             </ng-container>
-            <ng-container *ngIf="WHRejection === 1 ">
+            <ng-container *ngIf="WHRejectionApproval === 1 ">
               <button mat-menu-item routerLinkActive="link-active">
                 <!-- <mat-icon matBadgeColor="warn">category</mat-icon> -->
                 <span [routerLink]=" [ '/admin', 'wh-rejection'] ">WH Rejection</span> &nbsp;&nbsp;
