--- a/app/admin/components/user-account/user-account.component.html
+++ b/app/admin/components/user-account/user-account.component.html
@@ -461,13 +461,13 @@
           <hr>
           <div class="form-row">
             <div class="form-group col-sm-3">
-              <input type="checkbox" formControlName="Approver">
+              <input type="checkbox"  formControlName="Approver">
               <div>
                 <span>Approver</span>
               </div>
             </div>
             <div class="form-group col-sm-3">
-              <input type="checkbox" formControlName="Requestor">
+              <input type="checkbox"  formControlName="Requestor" [checked]>
               <div>
                 <span>Requestor</span>
               </div>
