Remove the hot reload concern the page is not gave the actual role for User -- FIXED TICKET 1500

--- a/app/app.component.html
+++ b/app/app.component.html
@@ -190,7 +190,7 @@
         </ng-container>
 
         <!-- Preparation Module -->
-        <ng-container *ngIf="Preparation === 1 ">
+        <ng-container class="zerobadge0" *ngIf="Preparation === 1 ">
           <a class="system-name" mat-list-item routerLinkActive="link-active" #menuTrigger="matMenuTrigger"
             [matMenuTriggerFor]="menu_prep">
             <mat-icon>add_shopping_cart</mat-icon>
