--- a/app/admin/components/dashboard/dashboard.component.html
+++ b/app/admin/components/dashboard/dashboard.component.html
@@ -36,10 +36,11 @@
     <ng-container
       *ngIf="loginService.currentUserName != null && loginService.currentUserRoleSession == 'WarehouseChecker'">
 
-        <div [routerLink]=" [ '/admin', 'whstoreorder' ] " fxFlex="1 1 75%" class="h-100 text-right" fxLayout="column" fxLayoutAlign="center start">
-          <div  class="dashboard-tile-heading">Store Orders</div>
-          <div class="dashboard-tile-sub-heading">{{ totalStoreOrderRowCount | number}}</div>
-        </div>
+      <div [routerLink]=" [ '/admin', 'whstoreorder' ] " fxFlex="1 1 75%" class="h-100 text-right" fxLayout="column"
+        fxLayoutAlign="center start">
+        <div class="dashboard-tile-heading">Store Orders</div>
+        <div class="dashboard-tile-sub-heading">{{ totalStoreOrderRowCount | number}}</div>
+      </div>
 
     </ng-container>
 
@@ -86,7 +87,8 @@
     <!-- Warehouse Checker -->
     <ng-container
       *ngIf="loginService.currentUserName != null && loginService.currentUserRoleSession == 'WarehouseChecker'">
-      <div [routerLink]=" [ '/admin', 'wh-prepared-store-order' ] "  fxFlex="1 1 75%" class="h-100 text-right" fxLayout="column" fxLayoutAlign="center start">
+      <div [routerLink]=" [ '/admin', 'wh-prepared-store-order' ] " fxFlex="1 1 75%" class="h-100 text-right"
+        fxLayout="column" fxLayoutAlign="center start">
         <div class="dashboard-tile-heading">Prepared Orders</div>
         <div class="dashboard-tile-sub-heading">{{totalStoreOrderPreparedDistinctRowCount | number}}</div>
       </div>
@@ -132,7 +134,8 @@
     <!-- Warehouse Checker -->
     <ng-container
       *ngIf="loginService.currentUserName != null && loginService.currentUserRoleSession == 'WarehouseChecker'">
-      <div [routerLink]=" [ '/admin', 'store-order-dispatching' ] " fxFlex="1 1 75%" class="h-100 text-right" fxLayout="column" fxLayoutAlign="center start">
+      <div [routerLink]=" [ '/admin', 'store-order-dispatching' ] " fxFlex="1 1 75%" class="h-100 text-right"
+        fxLayout="column" fxLayoutAlign="center start">
         <div class="dashboard-tile-heading">Dispatching Records</div>
         <div class="dashboard-tile-sub-heading">{{totalStoreDispatching | number}}</div>
       </div>
@@ -177,8 +180,9 @@
     <!-- WarehouseChecker -->
     <ng-container
       *ngIf="loginService.currentUserName != null && loginService.currentUserRoleSession == 'WarehouseChecker'">
-      <div [routerLink]=" [ '/admin', 'wh-cancelledprepared-store-order' ] " fxFlex="1 1 75%" class="h-100 text-right" fxLayout="column" fxLayoutAlign="center start">
-        <div  class="dashboard-tile-heading">Cancelled Transactions</div>
+      <div [routerLink]=" [ '/admin', 'wh-cancelledprepared-store-order' ] " fxFlex="1 1 75%" class="h-100 text-right"
+        fxLayout="column" fxLayoutAlign="center start">
+        <div class="dashboard-tile-heading">Cancelled Transactions</div>
         <div class="dashboard-tile-sub-heading">{{ totalCancelledTransactions | number}}</div>
       </div>
     </ng-container>
@@ -268,12 +272,7 @@
   </mat-grid-tile>
 
 
-<mat-grid-tile class="dashboard-tile dashboard-tile-6" [colspan]="cardColspan" rowspan="4">
+  <mat-grid-tile class="dashboard-tile dashboard-tile-6" [colspan]="cardColspan" rowspan="4">
     <div [chart]="columnChart" class="w-100 hideObject"></div>
   </mat-grid-tile>
 </mat-grid-list>
-
-
-
-
-
