View Cancelled MRS Enable the Action ng container

--- a/app/components/online-mrs/online-mrs.component.html
+++ b/app/components/online-mrs/online-mrs.component.html
@@ -344,9 +344,9 @@
                       <th>Cancelled Date</th>
                       <th>Reason</th>
                       <th>Total Item/s</th>
-                      <ng-container *ngIf="Role === 'Admin' || approverRole === true ">
+                      <!-- <ng-container *ngIf="Role === 'Admin' || approverRole === true "> -->
                         <th style="width: 20%;" class="text-center">Actions</th>
-                      </ng-container>
+                      <!-- </ng-container> -->
                     </tr>
                   </thead>
                   <tr
