MRS Approved Order and Search Box modifications

--- a/app/admin/components/user-account/user-account.component.html
+++ b/app/admin/components/user-account/user-account.component.html
@@ -524,7 +524,7 @@
           </div>
         </form>
 
-        <!-- {{editUser.value | json}} -->
+        {{editUser.value | json}}
 
         <div class="modal-footer">
           <button mat-stroked-button [hidden]="true" color="accent" class="mr-1" id="closeUpdateModal"
