--- a/app/app.component.html
+++ b/app/app.component.html
@@ -218,8 +218,8 @@
             routerLinkActive="link-active">
             <mat-icon>wallpaper</mat-icon>
             &nbsp;Online MRS &nbsp;&nbsp;
-            <span class="badge badge-pill badge-danger zerobadge{{ totalPreparationBadge | number }}">{{
-              totalPreparationBadge | number }}</span>
+            <span class="badge badge-pill badge-danger zerobadge{{ totalMRSOrder | number }}">{{
+              totalMRSOrder | number }}</span>
           </a>
         </ng-container>
 
