--- a/app/components/online-mrs/online-mrs.component.html
+++ b/app/components/online-mrs/online-mrs.component.html
@@ -196,8 +196,12 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Find here...." id="txtSearchText"
-                    name="SearchText" [(ngModel)]="searchText" (keyup)="onSearchTextKeyupApproved($event)" />
+                  <input type="search" 
+                  class="form-control" placeholder="Find here...." id="txtSearchText"
+                    name="SearchText"
+                    autocomplete ="off" 
+                    [(ngModel)]="searchText" 
+                    (keyup)="onSearchTextKeyupApproved($event)" />
                 </div>
               </div>
             </div>
@@ -206,7 +210,6 @@
           <div class="col-lg-12">
             <div class="d-flex">
               <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain tbl-text">
-                <!-- table table-striped table-bordered nowrap table-responsive-sm -->
                 <table class="" style="width: 100%" class="text-center">
                   <thead>
                     <tr class="text-light header-bg-color-um system-name">
@@ -322,7 +325,11 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Find here...." id="txtSearchText"
+                  <input type="search"
+                   class="form-control" 
+                   placeholder="Find here...." 
+                   id="txtSearchText"
+                   autocomplete="off"
                     name="SearchText" [(ngModel)]="searchText" (keyup)="onSearchTextKeyupCancelled($event)" />
                 </div>
               </div>
@@ -344,9 +351,7 @@
                       <th>Cancelled Date</th>
                       <th>Reason</th>
                       <th>Total Item/s</th>
-                      <!-- <ng-container *ngIf="Role === 'Admin' || approverRole === true "> -->
-                        <th style="width: 20%;" class="text-center">Actions</th>
-                      <!-- </ng-container> -->
+                        <th style="width: 20%;" class="text-center">Actions</th>             
                     </tr>
                   </thead>
                   <tr
