--- a/app/admin/components/projects/projects.component.html
+++ b/app/admin/components/projects/projects.component.html
@@ -8,187 +8,193 @@
           </a></li>
         <li class="breadcrumb-item dashboardActive" aria-current="page"> QC Receiving </li>
       </ol>
-      
+
 
     </nav>
 
     <mat-tab-group mat-align-tabs="start" (selectedTabChange)="poRecievingTabforRefresh($event)">
 
-<ng-template [ngIf]="PoReceiving === 1">
-      <mat-tab>
+      <ng-template [ngIf]="PoReceiving === 1">
+        <mat-tab>
 
-        <ng-template mat-tab-label >
-          PO Receiving
-          &nbsp; <span class="badge badge-danger zerobadge{{ totalPoRowCount | number}}">{{ totalPoRowCount }}</span>
-        </ng-template>
+          <ng-template mat-tab-label>
+            PO Receiving
+            &nbsp; <span class="badge badge-danger zerobadge{{ totalPoRowCount | number}}">{{ totalPoRowCount }}</span>
+          </ng-template>
 
-        <!-- filter -->
-        <div class="col-sm-12" style="padding-top: 2em;">
-          <div class="d-flex">
-            <div class="p-2">
-              <div class="input-group searchBtnStyle">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
+          <!-- filter -->
+          <div class="col-sm-12" style="padding-top: 2em;">
+            <div class="d-flex">
+              <div class="p-2">
+                <div class="input-group searchBtnStyle">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><span class="fa fa-filter"></span></span>
+                  </div>
+                  <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy"
+                    (selectionChange)="HideSearchBtn($event)">
+                    <option value="po_number">PO NUMBER</option>
+                    <option value="item_code">ITEM CODE</option>
+                  </select>
                 </div>
-                <select class="form-control" id="drpSearchBy" name="SearchBy" [(ngModel)]="searchBy"
-                  (selectionChange)="HideSearchBtn($event)">
-                  <option value="po_number">PO NUMBER</option>
-                  <option value="item_code">ITEM CODE</option>
-                </select>
               </div>
-            </div>
 
-            <div>
+              <div>
 
-            </div>
+              </div>
 
-            <div class="p-2">
-              <div class="input-group searchBtnStyle">
-                <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
+              <div class="p-2">
+                <div class="input-group searchBtnStyle">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1"><span class="fa fa-search"></span></span>
+                  </div>
+                  <input type="search" class="form-control" placeholder="Find here...." id="txtSearchText"
+                    name="SearchText" autocomplete="off" [(ngModel)]="searchText" (keyup)="onSearchTextKeyup($event)" />
                 </div>
-                <input type="search" class="form-control" placeholder="Find here...." id="txtSearchText"
-                  name="SearchText" autocomplete="off" [(ngModel)]="searchText" (keyup)="onSearchTextKeyup($event)" />
               </div>
             </div>
           </div>
-        </div>
 
-        <!-- <button (click)="any($event)">Method 1</button> -->
+          <!-- <button (click)="any($event)">Method 1</button> -->
 
 
-        <!-- table -->
-        <div class="col-lg-12">
-          <div class="d-flex">
-            <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain tbl-text">
-              <!-- table table-striped table-bordered nowrap table-responsive-sm -->
-              <table class="" style="width: 100%">
-                <thead>
-                  <tr class="text-light header-bg-color-um system-name">
-                    <th>PO No.</th>
-                    <th>Item Code</th>
-                    <th>Description</th>
-                    <th>Supplier</th>
-                    <th>Qty Ordered</th>
-                    <th>Remaining</th>
-                    <th class="text-center">Actions</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr
-                    *ngFor="let project of projects | filter: searchBy:searchText | paging: currentPageIndex:pageSize; let i = index">
-                    <td>{{ project.po_number }}</td>
-                    <td>{{ project.item_code }}</td>
-                    <td class="td-text-left">{{ project.item_description }}</td>
-                    <td class="td-text-left">{{ project.supplier | uppercase }}</td>
-                    <td>{{ project.qty_order | number: "1.0":"en-US" }}</td>
-                    <td>{{ project.actual_remaining_receiving | number: "1.0":"en-US" }}
-                    </td>
+          <!-- table -->
+          <div class="col-lg-12">
+            <div class="d-flex">
+              <div class="col-xl-12 col-lg-9 mx-auto scrollableTableMain tbl-text">
+                <!-- table table-striped table-bordered nowrap table-responsive-sm -->
+                <table class="" style="width: 100%">
+                  <thead>
+                    <tr class="text-light header-bg-color-um system-name">
+                      <th>PO No.</th>
+                      <th>Item Code</th>
+                      <th>Description</th>
+                      <th>Supplier</th>
+                      <th>Qty Ordered</th>
+                      <th>Remaining</th>
+                      <th class="text-center">Actions</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr
+                      *ngFor="let project of projects | filter: searchBy:searchText | paging: currentPageIndex:pageSize; let i = index">
+                      <td>{{ project.po_number }}</td>
+                      <td>{{ project.item_code }}</td>
+                      <td class="td-text-left">{{ project.item_description }}</td>
+                      <td class="td-text-left">{{ project.supplier | uppercase }}</td>
+                      <td>{{ project.qty_order | number: "1.0":"en-US" }}</td>
+                      <td>{{ project.actual_remaining_receiving | number: "1.0":"en-US" }}
+                      </td>
 
-                    <td class="text-center">
-                      <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, i)"
+                      <td class="text-center">
+                        <!-- <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, i)"
+                          data-toggle="modal" data-target="#editModal" data-backdrop="false" title="For Checklist"
+                          data-keyboard="false">
+                          <span class="fa fa-check-circle"></span> Checklist
+                        </button> -->
+                        <button mat-stroked-button color="primary" class="editbtnStyle" (click)="onEditClick($event, i)"
                         data-toggle="modal" data-target="#editModal" data-backdrop="false" title="For Checklist"
                         data-keyboard="false">
                         <span class="fa fa-check-circle"></span> Checklist
                       </button>
-                      <ng-container *ngIf="
+                        <ng-container *ngIf="
                           loginService.currentUserName != null &&
                           loginService.currentUserRoleSession == 'Admin'
                         ">
-                        <button mat-stroked-button class="editbtnStyle" color="warn" (click)="onCancelClick($event, i)"
-                          data-toggle="modal" data-target="#CancelledTransactionModal" data-backdrop="false"
-                          data-keyboard="false" title="Cancel PO">
-                          <span class="fa fa-ban"></span> Cancel
-                        </button>&nbsp;
-                      </ng-container>
-                    </td>
-                  </tr>
-                </tbody>
-              </table>
+                          <button mat-stroked-button class="editbtnStyle" color="warn"
+                            (click)="onCancelClick($event, i)" data-toggle="modal"
+                            data-target="#CancelledTransactionModal" data-backdrop="false" data-keyboard="false"
+                            title="Cancel PO">
+                            <span class="fa fa-ban"></span> Cancel
+                          </button>&nbsp;
+                        </ng-container>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
             </div>
+            <!-- <button (click)="mapArrayData()">click</button> -->
           </div>
-          <!-- <button (click)="mapArrayData()">click</button> -->
-        </div>
 
-        <!-- pagination -->
-        <div class="col-sm-12">
-          <ul class="pagination paginationStyle justify-content-center mt-1">
-            <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
-              <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
-                onclick="return false">Prev</a>
-            </li>
+          <!-- pagination -->
+          <div class="col-sm-12">
+            <ul class="pagination paginationStyle justify-content-center mt-1">
+              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex - 1)">
+                <a mat-stroked-button color="primary" class="mr-1 font-color-black" href="#"
+                  onclick="return false">Prev</a>
+              </li>
 
-            <ng-container *ngIf="pages.length <= 10">
-              <li class="page-item" *ngFor="let page of pages" [ngClass]="{
+              <ng-container *ngIf="pages.length <= 10">
+                <li class="page-item" *ngFor="let page of pages" [ngClass]="{
                   'link-active-paging': page.pageIndex == currentPageIndex
                 }" (click)="onPageIndexClicked(page.pageIndex)">
-                <a class="page-link" href="#" onclick="return false">{{
-                  page.pageIndex + 1
-                  }}</a>
-              </li>
-            </ng-container>
+                  <a class="page-link" href="#" onclick="return false">{{
+                    page.pageIndex + 1
+                    }}</a>
+                </li>
+              </ng-container>
 
-            <ng-container *ngIf="pages.length > 10">
-              <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0 }"
-                (click)="onPageIndexClicked(0)">
-                <a class="page-link" href="#" onclick="return false">1</a>
-              </li>
+              <ng-container *ngIf="pages.length > 10">
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 0 }"
+                  (click)="onPageIndexClicked(0)">
+                  <a class="page-link" href="#" onclick="return false">1</a>
+                </li>
 
-              <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 1 }"
-                (click)="onPageIndexClicked(1)">
-                <a class="page-link" href="#" onclick="return false">2</a>
-              </li>
+                <li class="page-item" [ngClass]="{ 'link-active-paging': currentPageIndex == 1 }"
+                  (click)="onPageIndexClicked(1)">
+                  <a class="page-link" href="#" onclick="return false">2</a>
+                </li>
 
-              <li *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
-                &nbsp;...&nbsp;
-              </li>
+                <li *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
+                  &nbsp;...&nbsp;
+                </li>
 
-              <li class="page-item" [ngClass]="'link-active-paging'" (click)="onPageIndexClicked(currentPageIndex)"
-                *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
-                <a class="page-link" href="#" onclick="return false">{{
-                  currentPageIndex + 1
-                  }}</a>
-              </li>
+                <li class="page-item" [ngClass]="'link-active-paging'" (click)="onPageIndexClicked(currentPageIndex)"
+                  *ngIf="currentPageIndex > 1 && currentPageIndex < pages.length - 2">
+                  <a class="page-link" href="#" onclick="return false">{{
+                    currentPageIndex + 1
+                    }}</a>
+                </li>
 
-              <li>&nbsp;...&nbsp;</li>
+                <li>&nbsp;...&nbsp;</li>
 
-              <li class="page-item" [ngClass]="{
+                <li class="page-item" [ngClass]="{
                   'link-active-paging': currentPageIndex == pages.length - 2
                 }" (click)="onPageIndexClicked(pages.length - 2)">
-                <a class="page-link" href="#" onclick="return false">{{
-                  pages.length - 1
-                  }}</a>
-              </li>
+                  <a class="page-link" href="#" onclick="return false">{{
+                    pages.length - 1
+                    }}</a>
+                </li>
 
-              <li class="page-item" [ngClass]="{
+                <li class="page-item" [ngClass]="{
                   'link-active-paging': currentPageIndex == pages.length - 1
                 }" (click)="onPageIndexClicked(pages.length - 1)">
-                <a class="page-link" href="#" onclick="return false">{{
-                  pages.length
-                  }}</a>
-              </li>
-            </ng-container>
+                  <a class="page-link" href="#" onclick="return false">{{
+                    pages.length
+                    }}</a>
+                </li>
+              </ng-container>
 
-            <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
-              <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
-                onclick="return false">Next</a>
-            </li>
-          </ul>
-        </div>
-      </mat-tab>
+              <li class="page-item" (click)="onPageIndexClicked(currentPageIndex + 1)">
+                <a mat-stroked-button color="primary" class="ml-1 font-color-black" href="#"
+                  onclick="return false">Next</a>
+              </li>
+            </ul>
+          </div>
+        </mat-tab>
       </ng-template>
 
       <ng-template [ngIf]="CancelledPo === 1">
-      <mat-tab>
-        <ng-template mat-tab-label>
-          Cancelled PO     
+        <mat-tab>
+          <ng-template mat-tab-label>
+            Cancelled PO
 
-          &nbsp; <span class="badge badge-danger zerobadge{{ totalCancelledPoRowCount | number}}">{{
-            totalCancelledPoRowCount }}</span>
-        </ng-template>
-        <!-- <app-projects-cancelled-po></app-projects-cancelled-po> -->
-        <app-projects-cancelled-po [child_id]=ChildForm (uploaded)="ChildMethod($event)"></app-projects-cancelled-po>
-      </mat-tab>
+            &nbsp; <span class="badge badge-danger zerobadge{{ totalCancelledPoRowCount | number}}">{{
+              totalCancelledPoRowCount }}</span>
+          </ng-template>
+          <!-- <app-projects-cancelled-po></app-projects-cancelled-po> -->
+          <app-projects-cancelled-po [child_id]=ChildForm (uploaded)="ChildMethod($event)"></app-projects-cancelled-po>
+        </mat-tab>
       </ng-template>
     </mat-tab-group>
   </div>
